; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/arm/extr_arxescsi.c_arxescsi_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/arm/extr_arxescsi.c_arxescsi_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.expansion_card = type { i32 }
%struct.Scsi_Host = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.expansion_card*)* @arxescsi_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arxescsi_remove(%struct.expansion_card* %0) #0 {
  %2 = alloca %struct.expansion_card*, align 8
  %3 = alloca %struct.Scsi_Host*, align 8
  store %struct.expansion_card* %0, %struct.expansion_card** %2, align 8
  %4 = load %struct.expansion_card*, %struct.expansion_card** %2, align 8
  %5 = call %struct.Scsi_Host* @ecard_get_drvdata(%struct.expansion_card* %4)
  store %struct.Scsi_Host* %5, %struct.Scsi_Host** %3, align 8
  %6 = load %struct.expansion_card*, %struct.expansion_card** %2, align 8
  %7 = call i32 @ecard_set_drvdata(%struct.expansion_card* %6, i32* null)
  %8 = load %struct.Scsi_Host*, %struct.Scsi_Host** %3, align 8
  %9 = call i32 @fas216_remove(%struct.Scsi_Host* %8)
  %10 = load %struct.Scsi_Host*, %struct.Scsi_Host** %3, align 8
  %11 = call i32 @fas216_release(%struct.Scsi_Host* %10)
  %12 = load %struct.Scsi_Host*, %struct.Scsi_Host** %3, align 8
  %13 = call i32 @scsi_host_put(%struct.Scsi_Host* %12)
  %14 = load %struct.expansion_card*, %struct.expansion_card** %2, align 8
  %15 = call i32 @ecard_release_resources(%struct.expansion_card* %14)
  ret void
}

declare dso_local %struct.Scsi_Host* @ecard_get_drvdata(%struct.expansion_card*) #1

declare dso_local i32 @ecard_set_drvdata(%struct.expansion_card*, i32*) #1

declare dso_local i32 @fas216_remove(%struct.Scsi_Host*) #1

declare dso_local i32 @fas216_release(%struct.Scsi_Host*) #1

declare dso_local i32 @scsi_host_put(%struct.Scsi_Host*) #1

declare dso_local i32 @ecard_release_resources(%struct.expansion_card*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
